# scrounger

./: Cargo.toml
src/: events.rs  lib.rs  main.rs
src/events/: message.rs  ready.rs
