[package]
name = "scrounger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.3", features = ["blocking"] }
serenity = "0.12.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
